# optimize

./: Cargo.toml
src/: lib.rs  utils.rs
src/vector/: l_bfgs.rs  nelder_mead.rs
